apps/keycloak/networkpolicies/ingress-keycloak-postgres.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-keycloak-postgres
  namespace: keycloak
spec:
  selector: >-
    app.kubernetes.io/name == 'postgres' &&
    app.kubernetes.io/instance == 'keycloak'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        selector: >-
          app.kubernetes.io/name == 'keycloak' &&
          app.kubernetes.io/instance == 'keycloak'
      destination:
        ports:
          - 5432
