apps/keycloak/networkpolicies/ingress-keycloak.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: ingress-keycloak
  namespace: keycloak
spec:
  selector: >-
    app.kubernetes.io/name == 'keycloak' &&
    app.kubernetes.io/instance == 'keycloak'
  types:
    - Ingress
  ingress:
    - action: Allow
      protocol: TCP
      source:
        namespaceSelector: projectcalico.org/name == 'traefik'
        selector: app.kubernetes.io/instance == 'traefik'
      destination:
        ports:
          - 8080
